--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src"
   },
   "repository": {
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
     "type": "git",
     "url": "https://github.com/Romathonat/RRSUI-boilerplate.git"
   },
@@ -22,7 +23,7 @@
     "edit",
     "webpack"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon), modified by Romain Mathonat <romain.mathonat@gmail.com>",
+  "author": "Romain Mathonat <romain.mathonat@gmail.com>, originally from Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.0.20",
